CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(ParaView_DIR  /home/jjm390/LASP/ParaView/3.12.0/build/ParaView-build)

FIND_PACKAGE(ParaView REQUIRED)
INCLUDE(${PARAVIEW_USE_FILE})
ADD_PARAVIEW_PLUGIN(vtkENLILReader "1.0"
  SERVER_MANAGER_XML vtkENLILReader.xml
  SERVER_MANAGER_SOURCES vtkENLILReader.cxx 
  GUI_RESOURCE_FILES vtkENLILGUI.xml)


Target_LINK_LIBRARIES(vtkENLILReader 
)

INCLUDE_DIRECTORIES(${VTKNETCDF_BINARY_DIR})
