CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(ParaView_DIR /Users/jjm390/LASP/release/build_312/ParaView-build)

FIND_PACKAGE(ParaView REQUIRED)



INCLUDE(${PARAVIEW_USE_FILE})
ADD_PARAVIEW_PLUGIN(vtkENLILReader "1.0"
  SERVER_MANAGER_XML vtkENLILReader.xml
  SERVER_MANAGER_SOURCES vtkENLILReader.cxx 
  GUI_RESOURCE_FILES vtkENLILGUI.xml)

INCLUDE_DIRECTORIES(${VTKNETCDF_BINARY_DIR})
INCLUDE_DIRECTORIES(${VTKNETCDF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${ParaView_INCLUDE_DIR})


Target_LINK_LIBRARIES(vtkENLILReader ${ParaView_LIBRARIES})

